--- a/package.json
+++ b/package.json
@@ -10,38 +10,39 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.4",
     "@realm/react": "^0.4.1",
-    "@sentry/react-native": "4.13.0",
+    "@sentry/react-native": "4.9.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "d3": "^7.7.0",
     "date-fns": "^2.29.3",
-    "expo": "~47.0.9",
+    "expo": "44.0.0",
+    "expo-application": "~5.0.1",
+    "expo-constants": "~14.0.2",
     "expo-dev-client": "~2.0.1",
+    "expo-device": "~5.0.0",
+    "expo-network": "~5.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.4.0",
-    "realm": "^11.3.1",
-    "typescript": "^4.6.3",
+    "react-native-svg": "13.4.0",
+    "realm": "^11.7.0",
     "sentry-expo": "~6.0.0",
-    "expo-application": "~5.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-device": "~5.0.0",
-    "expo-updates": "~0.15.6",
-    "expo-network": "~5.0.0",
-    "react-native-get-random-values": "~1.8.0"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
